// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`send-attachment sends back status 410 when sending message to dead interaction 1`] = `
Object {
  "body": Object {
    "message": "Sending Attachment to dead interaction",
  },
  "status": 410,
}
`;

exports[`send-attachment sends back status 413 error when the file is too large 1`] = `
Object {
  "body": Object {
    "message": "File is too large",
  },
  "status": 413,
}
`;

exports[`send-attachment sends back status 500 when the file is too large 1`] = `
Object {
  "body": Object {
    "message": "File is too large",
  },
  "status": 500,
}
`;

exports[`send-attachment sends back status 500 when there is a problem sending message 1`] = `
Object {
  "body": Object {
    "message": "Could not send file to customer",
  },
  "status": 500,
}
`;

exports[`send-attachment sends back status 500 when there is an error retrieving cx credentials 1`] = `
Object {
  "body": Object {
    "message": "An Error has occurred trying to retrieve cx credentials",
  },
  "status": 500,
}
`;

exports[`send-attachment sends back status 500 when there is an error retrieving digital channels credentials (error by SmoochCore) 1`] = `
Object {
  "body": Object {
    "message": "An Error has occurred trying to retrieve digital channels credentials",
  },
  "status": 500,
}
`;

exports[`send-attachment sends back status 500 when there is an error retrieving file from S3 (thrown by generateFormDataFromStream()) 1`] = `
Object {
  "body": Object {
    "message": "Could not retrieve file from S3",
  },
  "status": 500,
}
`;

exports[`send-attachment sends back status 500 when there is an error retrieving file from S3 (thrown by retrieveObject()) 1`] = `
Object {
  "body": Object {
    "message": "Could not retrieve file from S3",
  },
  "status": 500,
}
`;

exports[`send-attachment sends back status 500 when there is an error retrieving the interaction metadata 1`] = `
Object {
  "body": Object {
    "message": "An error occurred retrieving the interaction metadata",
  },
  "status": 500,
}
`;

exports[`send-attachment sends back status 500 when there is an error sending file to customer 1`] = `
Object {
  "body": Object {
    "message": "Could not send file to customer",
  },
  "status": 500,
}
`;

exports[`send-attachment sends back status 500 when there is an error sending messages 1`] = `
Object {
  "body": Object {
    "message": "An error occurred sending message",
  },
  "status": 500,
}
`;

exports[`send-attachment sends back status 500 with an error 'status-text' 1`] = `
Object {
  "body": Object {
    "message": "status-text",
  },
  "status": 500,
}
`;

exports[`send-attachment sends back ststus 500 when there is an error retrieving digital channels credentials 1`] = `
Object {
  "body": Object {
    "message": "An Error has occurred trying to retrieve digital channels credentials",
  },
  "status": 500,
}
`;
